kubernetes/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mortgage-calculator
  labels:
    app: mortgage-calculator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mortgage-calculator
  template:
    metadata:
      labels:
        app: mortgage-calculator
    spec:
      containers:
      - name: mortgage-calculator
        image: dugan-docker-registry/mortgage-calculator-image:latest
        ports:
        - containerPort: 3000
